kubernetes/apps/netbird/app/deployment-dashboard.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-dashboard
  labels:
    app.kubernetes.io/name: netbird-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: netbird-dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: netbird-dashboard
    spec:
      containers:
        - name: dashboard
          image: netbirdio/dashboard:v2.37.1
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
