kubernetes/apps/netbird/app/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: netbird-server
  labels:
    app.kubernetes.io/name: netbird-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: netbird-server
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: grpc
      port: 8443
      targetPort: http
      protocol: TCP
      appProtocol: kubernetes.io/h2c
    - name: metrics
      port: 9090
      targetPort: metrics
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: netbird-dashboard
  labels:
    app.kubernetes.io/name: netbird-dashboard
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: netbird-dashboard
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: netbird-stun
  labels:
    app.kubernetes.io/name: netbird-server
spec:
  type: LoadBalancer
  loadBalancerClass: io.cilium/node
  externalTrafficPolicy: Local
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  selector:
    app.kubernetes.io/name: netbird-server
  ports:
    - name: stun
      port: 3478
      targetPort: stun
      protocol: UDP
