kubernetes/apps/netbird/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbird
spec:
  parentRefs:
    - name: gateway
      namespace: gateway-infra
      sectionName: https-wildcard
  hostnames:
    - netbird.salami.network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /management.ManagementService/
        - path:
            type: PathPrefix
            value: /signalexchange.SignalExchange/
      backendRefs:
        - name: netbird-server
          port: 8443
    - matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /oauth2
        - path:
            type: PathPrefix
            value: /relay
        - path:
            type: PathPrefix
            value: /ws-proxy
      backendRefs:
        - name: netbird-server
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: netbird-dashboard
          port: 80
